implemented pagination in the shop page